--- a/frontend/src/assets/sass/profil.scss
+++ b/frontend/src/assets/sass/profil.scss
@@ -15,7 +15,9 @@
         flex-direction: column;
 
     .user-img {
+        height: 100px;
         width: 100px;
+        object-fit: cover;
         margin-bottom: 1rem;
         border-radius: 200%;
         box-shadow: 0px 0px 10px 3px rgb(194, 194, 194);
@@ -83,9 +85,11 @@
         width: 25rem;
 
         .user-img {
+            height: 150px;
             width: 150px;
         }
         .update-img {
+            height: 100px;
             width: 100px;
         }
         .go-back {
