Mise en place de la logique like

--- a/frontend/src/assets/sass/home.scss
+++ b/frontend/src/assets/sass/home.scss
@@ -136,11 +136,11 @@
             align-items: center;
             input {
                 display: none;
-                &:checked + label i {
-                    color: rgb(251, 38, 38);
-                    transition: 0.3s;
-                }
             }
+            .isLiked {
+                color: rgb(251, 38, 38);
+            }
+
             i {
                 font-size: 1.5rem;
                 padding-right: 1rem;
